使用AI优化代码